--- a/views/widget/top/top_yimin.html
+++ b/views/widget/top/top_yimin.html
@@ -49,18 +49,26 @@
     line-height: 25px;
   }
   .l_u_com_phone{
-    width: 281px;
-    height: 26px;
+    width: 295px;
+    height: 40px;
     padding-left: 35px;
     font-size: 14px;
     color: #999;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    background-color: #fff;
+    background-image: none;
   }
   .l_u_com_yan{
     width: 182px;
-    height: 26px;
+    height: 40px;
     padding-left: 34px;
     font-size: 14px;
     color: #999;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    background-color: #fff;
+    background-image: none;
   }
   .l_u_com_bang{
     width: 90px;
@@ -75,6 +83,8 @@
     height: 40px;
     background-color: #c13232;
     color: #fff;
+    border: 1px solid #c13232;
+    border-radius: 4px;
   }
   .l_u_com_but:hover{
     color: #fff;
