--- a/views/login/loginUser.html
+++ b/views/login/loginUser.html
@@ -4,12 +4,9 @@
 
   {% include "header_new.html" %}
   <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/widget/nav_login.css"/>
-  
   <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/custom.css"/>
 
-  <script src="{{helper.cdnhost}}/assets/js/bootstrap.min.js?v=3.3.6"></script>
-  <script src="{{helper.cdnhost}}/assets/js/Bootstrap_popover.js"></script>
-  <script src="{{helper.cdnhost}}/dep/js/layer.min.js"></script>
+  <script src="{{helper.cdnhost}}/dep/js/layer/layer.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/icheck.min.js"></script>
   <style type="text/css">
     .inputtext_isr{
@@ -30,8 +27,50 @@
       margin-right: 10px;
       cursor:pointer;
     }
-    login_nei input {
+    .inputtext_isr input {
+      width: 100%;
+      height: 34px;
+      color: #999;
+      margin-bottom: 15px;
       border-radius: inherit;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      background-color: #fff;
+      background-image: none;
+    }
+    .inputtext_isr .login_error{
+      background-color: #FFFBEF;
+      border: 1px solid #C13232;
+      padding: 6px 12px;
+      z-index: 1;
+      box-shadow: 0 1px 1px #eee;
+      color: #C13232;
+      position: absolute;
+      right: -170px;
+      left: 250px;
+      top: -19px;
+      opacity: 1;
+    }
+    .inputtext_isr .login_error:after,.login_error:before{
+      border: 6px solid transparent;
+      content: ' ';
+      position: absolute;
+      left: 1em;
+    }
+    .inputtext_isr .login_error:before{
+      border-top-color: #C13232;
+      bottom: -13px;
+    }
+    .inputtext_isr .login_error:after{
+      border-top-color: #fffbef;
+      bottom: -12px;
+    }
+    .inputtext_isr .login_x{
+      width: 9px;
+      height: 9px;
+      display: inline-block;
+      margin-right: 5px;
+      background: url({{helper.cdnhost}}/assets/img/login_error_1.png)
     }
     
   </style>
@@ -64,6 +103,7 @@
           <div class="form-group inputtext_isr" style="position: relative;height: 28px">
             <input type="text" style="border-radius: inherit;height: 30px;" class="form-control" placeholder="请输入手机号" id="newEmail" required data-vaild="^1\d{10}$" data-errmsg="手机号不正确"/>
             <i style="color: #999;position: absolute;top: 8px;width: 12px;left: 8px" class="iconfont">&#xe619;</i>
+            <span class="login_error" id="login_e_phone_u" style="display: none;"><i class="login_x"></i><em id="login_error_text_phone_u">请输入手机号</em></span>
           </div>
           <!--<div class="form-group inputtext_isr" style="position: relative;height: 28px;margin-top: 20px">
             <input type="password" style="border-radius: inherit;" class="form-control" placeholder="密码" required="" data-vaild="^[a-zA-Z0-9]{8,16}$" id="password" data-errmsg="密码不正确，请输入8-16位数字或字母">
@@ -94,9 +134,9 @@
               <a target="_blank"  href="{{helper.urlgen('forget')}}" style="float: right"><small>忘记密码了？</small></a>
             </div>-->
 
-          <input type="button" class="btn login-primary" style="width: 100%;padding-left: 0;padding-right: 0;border-radius: inherit;" id="loginSubmit" value="立 即 登 录" data-url='{{url}}'/>
+          <input type="button" class="btn login-primary" style="margin-top: 20px;width: 100%;height: 34px;padding-left: 0;padding-right: 0;border-radius: inherit;border: 1px solid #c13232;border-radius: 4px;" id="loginSubmit" value="立 即 登 录" data-url='{{url}}'/>
 
-          <div class="form-group text-left" id="login_user" style="color: #999;margin-top: 0px;margin-left: -20px;">
+          <div class="form-group text-left" id="login_user" style="color: #999;margin-top: 20px;margin-left: -0px;">
               <div class="checkbox i-checks" style="color: #999;">
                 <label class="no-padding">
                   <input type="checkbox" checked><i></i> 我已阅读并同意</label>
@@ -105,7 +145,7 @@
           </div>
         </form>
 
-        <div class="fen" style="margin-top: -5px;">
+        <div class="fen" style="margin-top: 15px;">
           <h4 style="line-height: 37px;">第三方快速登录：</h4>
           <div class="bdsharebuttonbox" id="fx" style="float: left;margin-top: 7px">
             <img src="{{helper.cdnhost}}/assets/img/weibo_login.png" alt="" id="weibo_user" style="float: left;" data-url="{{url}}"/>
@@ -159,7 +199,7 @@
       });
     })
 
-    $("form").Vaild();
+    // $("form").Vaild();
     $('.i-checks').iCheck({
       checkboxClass: 'icheckbox_square-green',
       radioClass: 'iradio_square-green'
@@ -235,15 +275,20 @@
   function sendphone_user () {
     if ($('#newEmail').val() === '') {
 //            let butp = document.getElementById('phone')
-      $('#newEmail').parent().addClass("has-error").removeClass("has-success");
-      $('#newEmail').data("toogle", "left").data("placement", "right").data("container", "body").data("content", '请输入手机号码').popover({"trigger":"manual"}).popover("show");
+      // $('#newEmail').parent().addClass("has-error").removeClass("has-success");
+      // $('#newEmail').data("toogle", "left").data("placement", "right").data("container", "body").data("content", '请输入手机号码').popover({"trigger":"manual"}).popover("show");
+      $('#login_e_phone_u').css('display','block');
       return
     }
     if (!/^1\d{10}$/.test($("#newEmail").val())) {
 //            let butp = document.getElementById('phone')
-      $('#newEmail').parent().addClass("has-error").removeClass("has-success");
-      $('#newEmail').data("toogle", "left").data("placement", "right").data("container", "body").data("content", '请输入正确手机号码').popover({"trigger":"manual"}).popover("show");
+      // $('#newEmail').parent().addClass("has-error").removeClass("has-success");
+      // $('#newEmail').data("toogle", "left").data("placement", "right").data("container", "body").data("content", '请输入正确手机号码').popover({"trigger":"manual"}).popover("show");
+      $('#login_e_phone_u').css('display','block');
+      $('#login_error_text_phone_u').html('请输入正确手机号码');
       return
+    } else {
+      $('#login_e_phone_u').css('display','none');
     }
     if ($('#tupian_user').val() == '') {
       layer.msg('请输入图片验证码');
@@ -304,14 +349,19 @@ function loginS () {
   console.log('url',url)
   console.log('login_ssssss')
   if ($('#newEmail').val() === '') {
-    $('#newEmail').parent().addClass("has-error").removeClass("has-success");
-    $('#newEmail').data("toogle", "left").data("placement", "right").data("container", "body").data("content", '请输入手机号').popover({"trigger":"manual"}).popover("show");
+    // $('#newEmail').parent().addClass("has-error").removeClass("has-success");
+    // $('#newEmail').data("toogle", "left").data("placement", "right").data("container", "body").data("content", '请输入手机号').popover({"trigger":"manual"}).popover("show");
+    $('#login_e_phone_u').css('display','block');
     return
   }
   if (!/^[A-Za-z0-9]{6}$/.test($('#newEmail').val()) && !/^1\d{10}$/.test($('#newEmail').val())) {
-    $('#newEmail').parent().addClass("has-error").removeClass("has-success");
-    $('#newEmail').data("toogle", "left").data("placement", "right").data("container", "body").data("content", '请输入正确手机号').popover({"trigger":"manual"}).popover("show");
+    // $('#newEmail').parent().addClass("has-error").removeClass("has-success");
+    // $('#newEmail').data("toogle", "left").data("placement", "right").data("container", "body").data("content", '请输入正确手机号').popover({"trigger":"manual"}).popover("show");
+    $('#login_e_phone_u').css('display','block');
+    $('#login_error_text_phone_u').html('请输入正确手机号码');
     return
+  } else {
+    $('#login_e_phone_u').css('display','none');
   }
   if ($('#verify_user').val() === '') {
     layer.msg('请输入短信验证码');
