--- a/views/widget/top/top_login.html
+++ b/views/widget/top/top_login.html
@@ -49,18 +49,26 @@
     line-height: 25px;
   }
   .l_u_com_phone{
-    width: 281px;
-    height: 26px;
+    width: 295px;
+    height: 40px;
     padding-left: 35px;
     font-size: 14px;
     color: #999;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    background-color: #fff;
+    background-image: none;
   }
   .l_u_com_yan{
     width: 182px;
-    height: 26px;
+    height: 40px;
     padding-left: 34px;
     font-size: 14px;
     color: #999;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    background-color: #fff;
+    background-image: none;
   }
   .l_u_com_bang{
     width: 90px;
@@ -75,6 +83,8 @@
     height: 40px;
     background-color: #c13232;
     color: #fff;
+    border: 1px solid #c13232;
+    border-radius: 4px;
   }
   .l_u_com_but:hover{
     color: #fff;
@@ -277,14 +287,12 @@ input[type="checkbox"] {
   })
 </script>
 <script src="{{helper.cdnhost}}/assets/js/sha1.js" type="text/javascript" charset="utf-8"></script>
-<script src="{{helper.cdnhost}}/assets/js/bootstrap.min.js?v=3.3.6"></script>
-<script src="{{helper.cdnhost}}/assets/js/Bootstrap_popover.js"></script>
-<script src="{{helper.cdnhost}}/dep/js/layer.min.js"></script>
+<script src="{{helper.cdnhost}}/dep/js/layer/layer.js"></script>
 
 <script>
     $(function() {
 
-    $("form").Vaild();
+    // $("form").Vaild();
     //登录
     var pac_d = document.getElementById('getloginUser_deng');
     if (pac_d) {
@@ -403,12 +411,12 @@ input[type="checkbox"] {
 	            	
               },
               cancel:function(){
-                $("#phone").parent().removeClass("has-error").addClass("has-success");
-                $("#phone").popover("destroy");
+                // $("#phone").parent().removeClass("has-error").addClass("has-success");
+                // $("#phone").popover("destroy");
               },
               end:function() {
-                $("#phone").parent().removeClass("has-error").addClass("has-success");
-                $("#phone").popover("destroy");
+                // $("#phone").parent().removeClass("has-error").addClass("has-success");
+                // $("#phone").popover("destroy");
               }
 	      });
   }
