--- a/views/user_information.html
+++ b/views/user_information.html
@@ -3,13 +3,11 @@
 <head >
   <meta charset="UTF-8">
   <title></title>
-  <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/bootstrap.min.css?v=3.3.6"/>
   {% include "header_new.html" %}
   <!--[if lt IE 10]>
   <script src="{{helper.cdnhost}}/assets/js/upgrade.js"></script>
   <![endif]-->
-  <script src="{{helper.cdnhost}}/assets/js/bootstrap.min.js?v=3.3.6"></script>
-  <script src="{{helper.cdnhost}}/assets/js/Bootstrap_popover.js"></script>
+  
 
   <style type="text/css">
     .content_title{
@@ -25,7 +23,7 @@
       font-size: 14px;  color: #C13232;  float: left;  margin-top: 5px;line-height: 30px;
     }
     .register_nei_content_s .register_nei_form .form-group input{
-      padding-left: 5px;  float: left;  margin-left: 10px;  margin-bottom: 30px;  width: 276px;  height: 30px;
+      padding-left: 5px;  float: left;  margin-left: 10px;  margin-bottom: 30px;  width: 276px;  height: 30px;border: 1px solid #ccc;border-radius: 4px;background-color: #fff;background-image: none;
     }
     .wrap-con  {
       -webkit-appearance: radio;  -moz-appearance: radio;  appearance: radio;  position: relative;  top:-3px;  left: 18px;  border: 0;  border:none;
@@ -44,6 +42,40 @@
         display: block;
         width:100%;
         height:100%;
+    }
+    .register_nei_form .login_error{
+      background-color: #FFFBEF;
+      border: 1px solid #C13232;
+      padding: 6px 12px;
+      z-index: 1;
+      box-shadow: 0 1px 1px #eee;
+      color: #C13232;
+      position: absolute;
+      right: 270px;
+      left: 315px;
+      top: -19px;
+      opacity: 1;
+    }
+    .register_nei_form .login_error:after,.register_nei_form .login_error:before{
+      border: 6px solid transparent;
+      content: ' ';
+      position: absolute;
+      left: 1em;
+    }
+    .register_nei_form .form-group .login_error:before{
+      border-top-color: #C13232;
+      bottom: -13px;
+    }
+    .register_nei_form .form-group .login_error:after{
+      border-top-color: #fffbef;
+      bottom: -12px;
+    }
+    .register_nei_form .login_x{
+      width: 9px;
+      height: 9px;
+      display: inline-block;
+      margin-right: 5px;
+      background: url({{helper.cdnhost}}/assets/img/login_error_1.png)
     }
     /*轮播图*/
     .banner-box{
@@ -101,11 +133,13 @@
         <div class="form-group clearfix" style="position: relative;height: 28px">
           <div class="title">*姓 名：&nbsp;&nbsp;&nbsp;</div>
           <input type="text" class="form-control" id="username" required data-vaild="" data-errmsg="姓名不能为空" value="{{userinfo.realname}}"/>
+          <span class="login_error" id="login_e_name_u" style="display: none"><i class="login_x"></i><em id="login_error_text_name_u">姓名不能为空</em></span>
         </div>
 
         <div class="form-group clearfix" style="position: relative;height: 28px;margin-top: 20px">
           <div class="title">*昵 称：&nbsp;&nbsp;&nbsp;</div>
           <input type="text" class="form-control" required="" data-vaild="" id="nicheng" data-errmsg="昵称不能为空" value="{{userinfo.nickname}}"/>
+          <span class="login_error" id="login_e_nicheng_u" style="display: none"><i class="login_x"></i><em id="login_error_text_nicheng_u">昵称不能为空</em></span>
         </div>
 
         <div class=" clearfix" id="xingbie" data-sex="{{userinfo.sex}}">
@@ -168,7 +202,7 @@
           slidesPerGroup : 2,
           pagination: true
       });
-    $("form").Vaild();
+    // $("form").Vaild();
     var lS = document.getElementById('baocunSubmit');
     console.log('loginS', lS);
     if (lS.addEventListener) {
@@ -334,14 +368,20 @@
   });
   function baocun () {
     if ($('#username').val() === '') {
-      $('#username').parent().addClass("has-error").removeClass("has-success");
-      $('#username').data("toogle", "left").data("placement", "right").data("container", "body").data("content", '姓名不能为空').popover({"trigger":"manual"}).popover("show");
+      // $('#username').parent().addClass("has-error").removeClass("has-success");
+      // $('#username').data("toogle", "left").data("placement", "right").data("container", "body").data("content", '姓名不能为空').popover({"trigger":"manual"}).popover("show");
+      $('#login_e_name_u').css('display', 'block')
       return
+    } else {
+      $('#login_e_name_u').css('display', 'none')
     }
     if ($('#nicheng').val() === '') {
-      $('#nicheng').parent().addClass("has-error").removeClass("has-success");
-      $('#nicheng').data("toogle", "left").data("placement", "right").data("container", "body").data("content", '昵称不能为空').popover({"trigger":"manual"}).popover("show");
+      // $('#nicheng').parent().addClass("has-error").removeClass("has-success");
+      // $('#nicheng').data("toogle", "left").data("placement", "right").data("container", "body").data("content", '昵称不能为空').popover({"trigger":"manual"}).popover("show");
+      $('#login_e_nicheng_u').css('display', 'block')
       return
+    } else {
+      $('#login_e_nicheng_u').css('display', 'none')
     }
     console.log('username', $('#username').val().length)
     if ($('#username').val().length > 10) {
@@ -352,7 +392,7 @@
       layer.msg('昵称请输入10个字以内');
       return
     }
-    if ($('#username').val() !== '' && $('#nicheng').val() !== '') {
+    if ($('#username').val() !== '' && $('#nicheng').val() !== '' && $('#username').val().length <= 10 && $('#nicheng').val().length <= 10) {
       $.ajax({
         url: '/soapi/user_info',
         type:'POST',
