--- a/views/widget/online_evaluation/online_evaluation.html
+++ b/views/widget/online_evaluation/online_evaluation.html
@@ -35,12 +35,12 @@
 						<div class="text1">
 						   <input name="name" id="name" type="text" placeholder="请输入您的称呼"/><i style="font-size: 14px;color: #c13232;line-height: 24px;padding-left: 4px;">*</i>
 						 </div>
-						<div class="textNum"><span class="numTip"  id="name-num"></span></div>
+						<div class="textNum"><span class="numTip"  id="name-num" style="padding-top: 0;"></span></div>
 					</div>
 					<div class="leaveField clearfix">
 						<div class="title">手机号码：</div>
 						<div class="text1"><input name="phone" id="phone-slide" type="text" placeholder="请留下您的电话号码" /><i style="font-size: 14px;color: #c13232;line-height: 24px;padding-left: 4px;">*</i></div>
-						<div class="textNum"><span id="phoneTip" class="numTip"></span></div>
+						<div class="textNum"><span id="phoneTip" class="numTip" style="padding-top: 0;"></span></div>
 					</div>
 
 						<div class="leaveField clearfix">
