--- a/views/widget/new_nav_first/new_nav_first.html
+++ b/views/widget/new_nav_first/new_nav_first.html
@@ -406,7 +406,17 @@
                 </div>#}
                 <!--新的城市下拉框-->
                 <div class="new-city-box">
-                    <div class="city-box-top"></div>
+                    <div class="city-box-top">
+                        <div class="city-address">
+                            <i class="iconfont">&#xe603;</i>
+                            <span id="city-address-text">北京市建国门外大街永安东里米阳大厦5层（永安里地铁C口向南50米）</span>
+                            <span>【点击查看地图】</span>
+                        </div>
+                        <div class="city-phone">
+                            <i class="iconfont">&#xe684;</i>
+                            <span id="city-phone">010-65685656</span>
+                        </div>
+                    </div>
                     <div class="city-box-body"></div>
                     <div class="city-box-bot"></div>
                 </div>
