--- a/views/widget/new_nav_first/new_nav_first.html
+++ b/views/widget/new_nav_first/new_nav_first.html
@@ -1,4 +1,5 @@
 {% macro new_nav_first(tdk,helper) %}
+<link rel="stylesheet" href="{{helper.cdnhost}}/views/widget/new_nav_first/new_nav_first.css"/>
 <div class="new_nav_first_white"  style="min-width: 1200px;">
     <div class="new_nav_first clearfix">
         <div class="new-logo-left">
