广告图 评审：淑琴

--- a/views/login/forget.html
+++ b/views/login/forget.html
@@ -232,7 +232,7 @@
 <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
 <script>
   $(document).ready(function () {
-
+    show_guanggao();
     // $("form").Vaild();
 
     //图片验证码
