--- a/views/login/register.html
+++ b/views/login/register.html
@@ -173,7 +173,7 @@
   <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
 <script>
   $(document).ready(function () {
-
+    show_guanggao();
     $("form").Vaild();
     $('.i-checks').iCheck({
       checkboxClass: 'icheckbox_square-green',
@@ -367,12 +367,6 @@
 
 
   }
-</script>
-
-<script>
-  $(function(){
-    show_guanggao()
-  })
 </script>
 </body>
 </html>
