--- a/views/about/events.html
+++ b/views/about/events.html
@@ -35,5 +35,10 @@
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
+<script>
+  $(function(){
+    show_guanggao()
+  })
+</script>
 </body>
 </html>
