--- a/views/adviser_main.html
+++ b/views/adviser_main.html
@@ -366,10 +366,10 @@
   function report() {
     //举报调取函数
     if (login_ss == undefined) {
-      layer.msg('你还没有登录')
-      window.setTimeout(function () {
+      // layer.msg('你还没有登录')
+      // window.setTimeout(function () {
         getlogin();
-      }, 1000);
+      // }, 1000);
       return false;
     }
     var report_content = null;
