--- a/views/widget2/community_advisor/community_advisor.css
+++ b/views/widget2/community_advisor/community_advisor.css
@@ -97,7 +97,7 @@
   text-align: center;
 }
 .community-advisor .advisor-intro{
-  padding:13px 20px;
+  padding:13px 20px 0px;
   font-size: 12px;
   color:#666666;
 }
@@ -122,23 +122,35 @@
 }
 .community-advisor .advisor-btn{
   height: 40px;
-  background: #ff8547;
   font-size:20px;
   color:#ffffff;
   line-height: 40px;
+  padding-bottom: 15px;
+  padding-top: 2px;
 }
 .community-advisor .advisor-btn-gray{
   background:#dcdcdc;
 }
 
-.community-advisor .advisor-zixun,.community-advisor .advisor-guanzhu{
+.community-advisor .advisor-zixun{
   font-size: 14px;
-  padding:1px  42px;
+  padding:4px  28px;
   cursor: pointer;
-  color: #fff
+  margin-left: 20px;
+  color: #fff;
+  background: #c13232;
+}
+.community-advisor .advisor-guanzhu {
+  font-size: 14px;
+  padding:3px 38px;
+  cursor: pointer;
+  margin-left: 18px;
+  color: #c13232;
+  border: 1px solid #c13232;
+  border-radius: 4px;
 }
 .community-advisor .advisor-zixun{
-  border-right:1px solid #ffffff;
+  border-radius: 4px;
 }
 .community-advisor .counsellor-guanzhu{
   font-size: 14px;
