表单改为get请求 评审：淑琴

--- a/views/about/cooperation.html
+++ b/views/about/cooperation.html
@@ -348,7 +348,7 @@
       }
       $.ajax({
         url:ajaxUrlPrefix.nodeapi+'/cmsapi/sign_up_way',
-        type:'POST',
+        type:'GET',
         data:{
           organization_name: $('#quickPhone').val(),
           contact_people: $('#quickPhone1').val(),
