--- a/views/widget/yimin_customization1/yimin_customization1.html
+++ b/views/widget/yimin_customization1/yimin_customization1.html
@@ -195,7 +195,7 @@
     //发送定制
     $.ajax({
       url: ajaxUrlPrefix.nodeapi + '/cmsapi/immi_case_plan', //移民方案定制
-      type:'POST',
+      type:'GET',
       data:{
         user_name: name,
         phone: phone,
