--- a/views/widget/new_footer/new_footer.css
+++ b/views/widget/new_footer/new_footer.css
@@ -1,10 +1,11 @@
 
 .liuxue-footer{
   width: 100%;
-  height: 424px;
+  height: auto;
   background: #000 url(../img/bg_footer.jpg);
   opacity: 0.9;
   margin-top:20px;
+  padding-bottom: 17px;
 }
 .liuxue-footer-content{
   width: 1180px;
@@ -13,7 +14,11 @@
   position: relative;
 }
 .liuxue-footer-content .foot-map {
-  padding: 50px 0 31px;
+  padding: 40px 0 31px;
+}
+.foot-map a:hover{
+  font-size: 14px;
+  text-decoration: underline;
 }
 .liuxue-footer-content .foot-map .sitemap h2{
   color:#ffffff;
@@ -42,7 +47,8 @@
   float: left;
 }
 .liuxue-footer-content .foot-map .sitemap01 .left-ul{
-  margin-right: 58px;
+  /*margin-right: 58px;*/
+  width:106px;
 }
 .liuxue-footer-content .foot-map .sitemap04 dl {
   float: left;
@@ -84,6 +90,7 @@
   font-size: 14px;
   color: #B4B4B4;
   margin-top: 34px;
+  padding-left: 20px;
 }
 .liuxue-footer-content .adviser-login {
   width: 98px;
@@ -97,4 +104,31 @@
   bottom: 0px;
   right: 232px;
   cursor: pointer;
+}
+/*友情链接*/
+.footer-top h2{
+  /*width: 120px;*/
+  float: left;
+  font-size: 16px;
+  line-height: 20px;
+  background: url(../img/foot_03.png) no-repeat left center;
+  padding-left:18px;
+  margin-top:20px;
+  margin-right: 35px;
+}
+.footer-top a{
+  /*padding:0 14px;*/
+  color:#ffffff;
+  font-size: 16px;
+  display: inline-block;
+  margin-top:21px;
+  margin-right: 30px;
+}
+.footer-top:after{
+  position: absolute;
+  display: block;
+  content: "";
+  border-bottom: 1px solid #333;
+  bottom: -20px;
+  width:100%;
 }
