--- a/views/widget/new_footer/new_footer.html
+++ b/views/widget/new_footer/new_footer.html
@@ -1,6 +1,10 @@
 <div class="liuxue-footer" style="min-width:1200px;">
   <div class="liuxue-footer-content" style="margin-bottom: 0;">
-    <div class="foot-map clearfix">
+    <div class="footer-top" style="height: 40px;position: relative">
+      <h2>友情链接:</h2>
+      {% esi helper.include(esikey,'fragment/linkList','c='+tdk.cityid) %}
+    </div>
+    <div class="foot-map clearfix" style="padding-left: 20px">
       <div class="sitemap sitemap01">
         <h2>关于金吉列</h2>
         <ul class="left-ul">
@@ -8,6 +12,7 @@
           <li><a target="_blank"  rel="nofollow"   href="{{ helper.urlgen('about/culture') }}">企业文化</a></li>
           <li><a target="_blank"  rel="nofollow"   href="{{ helper.urlgen('about') }}#honor">企业荣誉</a></li>
           <li><a target="_blank"  rel="nofollow"   href="{{ helper.urlgen('about/contact') }}">联系我们</a></li>
+          <li><a target="_blank"  rel="nofollow"   href="{{ helper.urlgen('about/contact') }}">意见反馈</a></li>
         </ul>
         <ul>
           <li><a target="_blank"  rel="nofollow"   href="{{ helper.urlgen('about/events') }}">大事记</a></li>
@@ -37,7 +42,7 @@
           </div>
       </div>
     </div>
-    <div class="address clearfix">
+    <div class="address clearfix" style="padding-left: 20px">
       <h2>欢迎来访</h2>
       <ol class="xiangxi-address one" id="qita-city">
         <li><i class="iconfont">&#xe679;</i><span>400-010-8000</span></li>
@@ -62,7 +67,7 @@
        </li>
 
       </ul>
-      <p class="copyright">©2009金吉列出国留学咨询服务有限公司 &nbsp;版权所有&nbsp;京ICP备05010035号&nbsp;&nbsp;留学投诉电话：4006-213-315&nbsp;&nbsp;投诉邮箱：315@jjl.cn</p>
+      <p class="copyright" style="padding-left: 0">©2009金吉列出国留学咨询服务有限公司 &nbsp;版权所有&nbsp;京ICP备05010035号&nbsp;&nbsp;留学投诉电话：4006-213-315&nbsp;&nbsp;投诉邮箱：315@jjl.cn</p>
       <div class="adviser-login" onclick="adviserlogin()">
         咨询顾问登录
       </div>
