侧栏js 引入加判断 评审：淑琴

--- a/views/adviser_main.html
+++ b/views/adviser_main.html
@@ -136,8 +136,10 @@
 <script src="{{helper.cdnhost}}/assets/js/xSlider-4.15.js"></script>
 {% if userinfo.usertype==3 %}
 <script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
-{% else %}
+{% elseif userinfo.adviser_type==1 %}
 <script src="{{helper.cdnhost}}/assets/js/slide2.js"></script>
+{% elseif userinfo.adviser_type==2   %}
+<script src="{{helper.cdnhost}}/assets/js/slide2_yimin.js"></script>
 {% endif %}
 <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
