--- a/views/release_article_yimin.html
+++ b/views/release_article_yimin.html
@@ -303,7 +303,7 @@
     {{slide.leyu_slide(helper) }}
   <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js" ></script>
-  <script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
+  <script src="{{helper.cdnhost}}/assets/js/slide_yimin.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
   <script  src="{{helper.cdnhost}}/assets/js/wangEditor.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
