--- a/views/article_detail.html
+++ b/views/article_detail.html
@@ -180,7 +180,11 @@
   <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/xSlider-4.15.js" ></script>
+  {% if userinfo.adviser_type==1 %}
   <script src="{{helper.cdnhost}}/assets/js/slide2.js"></script>
+  {% elseif userinfo.adviser_type==2   %}
+  <script src="{{helper.cdnhost}}/assets/js/slide2_yimin.js"></script>
+  {% endif %}
   <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/view_count_min.js"></script>
