--- a/views/center_case.html
+++ b/views/center_case.html
@@ -155,7 +155,11 @@
   {% endif %}
   <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js" ></script>
+  {% if userinfo.adviser_type==1 %}
   <script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
+  {% elseif  userinfo.adviser_type==2 %}
+  <script src="{{helper.cdnhost}}/assets/js/slide_yimin.js"></script>
+  {% endif %}
   <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
   <!--<script src="{{helper.cdnhost}}/assets/js/nav_seventh.js"></script>-->
   <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
