--- a/views/center_main.html
+++ b/views/center_main.html
@@ -198,7 +198,11 @@
 </div>
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js" ></script>
-<script src="{{helper.cdnhost}}/assets/js/slide2.js"></script>
+{% if userinfo.adviser_type==1 %}
+<script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
+{% elseif  userinfo.adviser_type==2 %}
+<script src="{{helper.cdnhost}}/assets/js/slide_yimin.js"></script>
+{% endif %}
 <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/bottom_comment_zhuanlan_wode.js"></script>
