--- a/views/index.html
+++ b/views/index.html
@@ -506,6 +506,10 @@
       } else {
         $(".top").empty();
         var val = '<div class="dui-layout-lg top-con" style="position: relative;">'+
+                  '<div class="top-con-left">'+
+                  '<img src="{{helper.cdnhost}}/assets/img/top_phone.png" alt="" class="top_400">'+
+                  '<span style="font-size: 12px;color: #666;">400-010-8000</span>'+
+                  '</div>'+
                   '<div class="top-con-right">'+
                   '<ul>';
         if (login_nickname.usertype == 1) {
