自己  不能关注自己  灰色 审核：王维久

--- a/views/widget2/community_advisor/community_advisor.css
+++ b/views/widget2/community_advisor/community_advisor.css
@@ -128,10 +128,15 @@
   padding-bottom: 15px;
   padding-top: 2px;
 }
-.community-advisor .advisor-btn-gray{
+.community-advisor .advisor-btn-gray .advisor-zixun{
   background:#dcdcdc;
 }
-
+.community-advisor .advisor-btn-gray .advisor-guanzhu {
+  background:#dcdcdc;
+  border: none;
+  color: #fff;
+  padding: 4px 38px;
+}
 .community-advisor .advisor-zixun{
   font-size: 14px;
   padding:4px  28px;
